# hallenfussball-pwa

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  BACKEND_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_INDEX.md  LICENSE  MONITOR-KONFIGURATOR-UMSETZUNGSPLAN.md  README.md  SCHEMA_IMPROVEMENTS.md  TESTFÄLLE_TURNIERLEITUNG.md  check-location.js  clarify-blockers.js  clarify-fairnesscalculator.js  clear-results.js  debug-playoff-resolution.js  eslint-local-rules.cjs  eslint.config.js  evaluate-plan.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  search-property-names.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  validate-bye-fix.js  vercel.json  vite.config.ts  vitest.config.ts
.agent/: architecture_proposal.md  codebase_analysis.md  deep_analysis.md  migration_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit  pre-push
.serena/: project.yml
User Stories/: IMPACT-ANALYSIS.md  QUICK-WINS-ANALYSIS.md
docs/: CODE-QUALITY-ANALYSIS.md  CODEBASE-ANALYSIS.md  CONCEPT_MULTI_SPORT.md  FAIR_SCHEDULER.md  TESTCASES.md  TODO.md  USER-STORIES-MULTI-USER.md  blocker-validation.md  index-code.md  plan-evaluation-adesso.md
eslint-rules/: no-hardcoded-font-styles.cjs  prefer-css-vars.cjs
playwright-report/: index.html
reviews/: 2026-03-16_1935_SUMMARY.md  2026-03-16_1935_architecture.md  2026-03-16_1935_code_quality.md  2026-03-16_1935_components_ui.md  2026-03-16_1935_export_output.md  2026-03-16_1935_hooks_state.md  2026-03-16_1935_i18n_a11y.md  (+45 more)
src/: App.tsx  (+3 more)
(+897 files in other folders)
